--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "@prisma/client": "^7.1.0"
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
+    "@prisma/client": "^7.1.0",
+    "better-sqlite3": "^12.5.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
